nav alignment fixed, other alignment tidy ups

--- a/css/main.css
+++ b/css/main.css
@@ -211,11 +211,13 @@ h3{
     font-size: 12px;
     color: white;
     margin-top: 20px;
+    margin-top: 10px;
 }
 
 .footBadgeSpace{
     padding-left: 10px;
     padding-right: 10px;
+
 }
 
 .textPadding{
@@ -271,8 +273,13 @@ h3{
 @media (max-width: 992px) {
 
     #leftnav li, #rightnav li{
-        margin-right: 10px;
+        margin-left: 40px;
     }
+
+    #equipAdjust{
+        margin-left: -10px;
+    }
+
 
     #footer{
         background-color: #167bbf;
@@ -290,7 +297,7 @@ h3{
 
 @media (max-width: 1200px) {
     .nav {
-        padding-left: 40px;
+
     }
 }
 
